Add explaination for longFormers resluts

--- a/submit/index.html
+++ b/submit/index.html
@@ -2043,7 +2043,11 @@
         appropriate serialization method to achieve optimal performance in table
         annotation tasks.
       </p>
-      <p></p>
+      <p>
+        Longformer's performance in comparison to BERT is lower, and one possible
+        reason for this is that the Longformer model employs a different attention
+        mechanism, which may not converge well with the current set of parameters
+      </p>
 
       <div style="text-align: center" class="tg-wrap">
         <table class="tg">
