--- a/submit/index.html
+++ b/submit/index.html
@@ -2165,6 +2165,11 @@
         appropriate serialization method to achieve optimal performance in table
         annotation tasks.
       </p>
+      <p>
+        Longformer's performance in comparison to BERT is lower, and one possible
+        reason for this is that the Longformer model employs a different attention
+        mechanism, which may not converge well with the current set of parameters
+      </p>
       <p>For the additional experiments, we did not achieve improvement on Test F1 score. Notably for LongFormer model, further modifications on the model setup should be investigated.</p>
 
       <div style="text-align: center" class="tg-wrap">
