final proofread and slightly adjust

--- a/submit/index.html
+++ b/submit/index.html
@@ -1452,14 +1452,14 @@
         Serializations. We also experimented with different preprocessing
         methods, such as TUTA, median, and mean preprocessing for each promising
         serialization. Additionally, we varied the proportions of the target
-        column and local context (MP - Main Percentange Ratio) to assess the
-        effect of context weight on different serializations, experimenting with
-        MP Ratios of 0.2, 0.5, and 0.8, respectively. For instance, the MP Ratio
-        of 0.8 for Neighboring Column Serialization, for the CPA task, allocates
-        80% of the available token limit to the Main and Target Columns and only
-        20% to their neighbors, Finally, in the early stages of our workflow, we
-        investigated the performance of augmentation strategies on single-column
-        serialization for the CPA task.
+        column and local context <i>(MP - Main Percentange Ratio)</i> to assess
+        the effect of context weight on different serializations, experimenting
+        with MP Ratios of 0.2, 0.5, and 0.8, respectively. For instance, the MP
+        Ratio of 0.8 for Neighboring Column Serialization, for the CPA task,
+        allocates 80% of the available token limit to the Main and Target
+        Columns and only 20% to their neighbors, Finally, in the early stages of
+        our workflow, we investigated the performance of augmentation strategies
+        on single-column serialization for the CPA task.
       </p>
 
       <span id="toc5.4"></span>
