Edit reference in CTA part

--- a/submit/index.html
+++ b/submit/index.html
@@ -973,22 +973,20 @@
       <h3>2.1 Column Type Annotation (CTA)</h3>
       <p>
         Column Type Annotation (CTA) is a critical task in data integration and
-        knowledge discovery that involves assigning labels to each column in a
-        table based on the types of entities it contains such as
+        knowledge discovery [<a href="#toc14">4</a>] that involves assigning 
+        labels to each column in a table based on the types of entities it contains
+         such as
         <b
           >"hotel/name", "streetAddress","addressLocality", "Country", and
           "currency"
-        </b>
+        </b>[<a href="#toc8">1</a>]
         as shown in <i>Figure 1</i>. While data types provide basic information
         about the type of data stored in a column, entity types capture
         domain-specific semantics that convey more meaning. For instance,
         labeling a column with <b>"hotel/name"</b> rather than just
         <b>"String" </b> provides valuable information about the specific type
         of data stored in that column, which is crucial for downstream tasks
-        such as data analysis and retrieval [<a href="#toc8">1</a>,<a
-          href="#toc14"
-          >4</a
-        >].
+        such as data analysis and retrieval [<a href="#toc24">16</a>].
       </p>
 
       <p>
@@ -3876,8 +3874,12 @@
         [15] Liu Y, Ott M, Goyal N, Du J, Joshi M, Chen D, Levy O, Lewis M,
         Zettlemoyer L, Stoyanov V. Roberta: A robustly optimized bert
         pretraining approach. arXiv preprint arXiv:1907.11692. 2019 Jul 26.<br />
-      </p>
 
+        <span id="toc24"></span>
+        [16] Nguyen P, Kertkeidkachorn N, Ichise R, Takeda H. MTab4DBpedia: Semantic 
+        Annotation for Tabular Data with DBpedia.
+
+      </p>
       <p>&nbsp;</p>
 
       <script type="text/javascript">
