--- a/submit/index.html
+++ b/submit/index.html
@@ -3273,66 +3273,100 @@
         Numeric columns contain only numbers, and URL columns contain web
         addresses. All other columns are classified as text, and if the token in
         the value is less than five, it is considered short text, otherwise, it
-        is long text. The results of each data type with micro-F1 score are
-        summarized in <i>Table 6</i> for CTA and CPA.
+        is long text. The results of each data type with micro-F1 score and distribution are
+        summarized in <i>Table 6a</i> for CTA and <i>Table 6b</i> for CPA.
+      </p>
+      <p>
+        We observed that the <strong>Boolean</strong> data accounts for a very small portion of the overall test sets. 
+        Therefore, any predictions made on this data can significantly impact the final score. 
+        For instance in CTA task, all 51 boolean data was correct predicted, resulting in a perfect F1 score.
+        However, in CPA task, although there were only 3 incorrect predictions out of a total of 20 Boolean data, the score notable decreased.
+        Upon further investigation, we found these errors were due to Actual wrong label of boolean data as height or gtin8.
+        In comparing the CPA and CTA tasks in other data types, it appears that the CPA tasks have lower scores. 
+        This could be due to the fact that the CPA tasks involve splitting the label spaces further, 
+        which can make it more challenging to accurately assign the correct labels.
+        For instance, in <strong>Numeric</strong> data, the CPA tasks have large numbers of incorrect predictions between gtin, gtin12, gtin13 and gtin14.
+        Also in <strong>URL</strong> data, some URLs refer to the source of images. In CPA tasks, these URLs are further split into more specific categories
+        such as logo, image, and photo which have high degree of similarity and make it more difficult for the model to distinguish between them.
+        The same issue also applies to <strong>short text</strong> and <strong>Long text</strong> data types.
       </p>
       <div style="text-align: center" class="tg-wrap">
         <table class="tg">
           <caption>
-            Table 6: Data Type Results for CTA & CPA
+            Table 6a: Data Type result for CTA
           </caption>
           <thead>
             <tr>
-              <th></th>
-              <th class="tg-ixdq">CTA</th>
-              <th class="tg-ixdq">CPA</th>
+              <th class="tg-mkpc">Data Type</th>
+              <th class="tg-mkpc">Overall Test F1</th>
+              <th class="tg-mkpc">Percentage of the type</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="tg-lboi">Boolean</td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>100
-              </td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>85
-              </td>
+              <td>Boolean</td>
+              <td>100</td>
+              <td>0.3</td>
             </tr>
             <tr>
-              <td class="tg-lboi">Numeric</td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>91.77
-              </td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>75.06
-              </td>
+              <td>Numeric</td>
+              <td>91.77</td>
+              <td>4.7</td>
             </tr>
             <tr>
-              <td class="tg-lboi">Long Text</td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>86.92
-              </td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>88.17
-              </td>
+              <td>URL</td>
+              <td>97.06</td>
+              <td>6.8</td>
             </tr>
             <tr>
-              <td class="tg-lboi">Short Text</td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>90.27
-              </td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>82.52
-              </td>
+              <td>Long Text</td>
+              <td>86.92</td>
+              <td>18.8</td>
             </tr>
             <tr>
-              <td class="tg-lboi">URL</td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>97.06
-              </td>
-              <td class="tg-lboi">
-                <span style="font-weight: 400; font-style: normal"></span>94.71
-              </td>
+              <td>Short text</td>
+              <td>90.27</td>
+              <td>69.4</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table class="tg">
+          <caption>
+            Table 6b: Data Type result for CPA
+          </caption>
+          <thead>
+            <tr>
+              <th class="tg-mkpc">Data Type</th>
+              <th class="tg-mkpc">Overall Test F1</th>
+              <th class="tg-mkpc">Percentage of the type</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Boolean</td>
+              <td>85</td>
+              <td>0.1</td>
+            </tr>
+            <tr>
+              <td>Numeric</td>
+              <td>75.06</td>
+              <td>7.8</td>
+            </tr>
+            <tr>
+              <td>URL</td>
+              <td>94.71</td>
+              <td>4.5</td>
+            </tr>
+            <tr>
+              <td>Long Text</td>
+              <td>88.17</td>
+              <td>12.5</td>
+            </tr>
+            <tr>
+              <td>Short text</td>
+              <td>82.52</td>
+              <td>75.2</td>
             </tr>
           </tbody>
         </table>
