--- a/submit/index.html
+++ b/submit/index.html
@@ -1048,6 +1048,12 @@
       <span id="toc3"></span>
       <h2>3. Related Work</h2>
       <span id="toc3.1"></span>
+
+      <p>
+        Chapter 3 provides an overview of relevant literature on table
+        annotation tasks and a Transformer-based language model, which is
+        currently the state-of-the-art approach for these tasks.
+      </p>
       <h3>3.1 Transformer</h3>
       <p>
         Transformers are a type of neural network architecture that has become
@@ -1055,7 +1061,8 @@
         applications. They were first introduced in 2017 by Vaswani et al [<a
           href="#toc15"
           >5</a
-        >]. and have since become one of the most popular deep-learning models.
+        >]. and have since become one of the most popular deep-learning models [<a
+        href="#toc24">17</a>].
         Transformers are based on the concept of self-attention, which allows
         the model to focus on different parts of the input sequence at each
         step.
@@ -1084,25 +1091,43 @@
         language understanding capabilities and Transformer's attention
         mechanism that captures contextualized column representations.
       </p>
-
-      <p>
-        Chapter 3 provides an overview of relevant literature on table
-        annotation tasks and a Transformer-based language model, which is
-        currently the state-of-the-art approach for these tasks.
-      </p>
       <span id="toc3.2"></span>
       <h3>3.2 TURL</h3>
       <p>
         The paper [<a href="#toc12">4</a>] provides a cornerstone for table
         representation through the introduction of a framework for table
-        understanding called TURL. TURL achieves this by utilizing
-        representation learning to learn contextualized representations on
-        relational tables. TURL's unsupervised pre-training on a vast web table
-        corpus derived from WikiTable facilitates its application in various
+        understanding called TURL. TURL achieves this by learning deep, 
+        contextualized representations of relational tables in an unsupervised manner.
+        TURL's unsupervised pre-training on a vast web table
+        corpus derived from WikiTable [<a href="#toc26">18</a>] facilitates its application in various
         downstream tasks, requiring only minimal task-specific modifications.
         For example, the TURL framework can be used to infer valuable
         information about tables such as column types and the relationships
         between columns (CTA and CPA).
+      </p>
+
+      <span id="toc3.1.Fig"></span>
+      <figure>
+        <img
+          src="images/TURL.JPG"
+          alt="TURL framework"
+          class="center"
+        />
+        <figcaption class="center">
+          <b><a id="Fig2"></a>Figure 2:</b> Overview of TURL framework.
+          [<a href="#toc12">4</a>]
+        </figcaption>
+      </figure>
+      <p>
+        As shown in figure <b><a id="Fig2">Figure 2</a></b>,  TURL is designed around three main components:
+         an embedding layer that converts input tables into embeddings, an N-stacked aware transformer
+          layer that processes these embeddings, and a projection layer that generates predictions.
+           To enhance its performance on a wide range of table-related tasks, TURL adopts a pre-training/finetuning paradigm.
+            During pretraining, TURL uses TinyBERT, a smaller, more computationally efficient version of the BERT language model.
+            In addition to this, TURL uses two training objectives,
+             the Masked Language Model (MLM) and the Masked Entity Recovery (MER).
+      TURL has been evaluated on six key table-related tasks, including entity linking, column type annotation, relation extraction, row population, cell filling, and schema augmentation.
+
       </p>
 
       <span id="toc3.3"></span>
@@ -3911,7 +3936,17 @@
 
         <span id="toc24"></span>
         [16] Nguyen P, Kertkeidkachorn N, Ichise R, Takeda H. MTab4DBpedia: Semantic 
-        Annotation for Tabular Data with DBpedia.
+        Annotation for Tabular Data with DBpedia.<br />
+
+        <span id="toc25"></span>
+        [17] Lin T, Wang Y, Liu X, Qiu X. A survey of transformers. AI Open. 2022 Oct 20.<br />
+
+        <span id="toc26"></span>
+        [18] Chandra Sekhar Bhagavatula, Thanapon Noraset, and Doug Downey. 2015. TabEL:
+        Entity Linking in Web Tables. In Proceedings of the 14th International Conference
+        on The Semantic Web-ISWC 2015-Volume 9366. 425–441. <br />
+
+  
 
       </p>
       <p>&nbsp;</p>
